Add java 11 support.